feat(sim): AirportCatalogCO añade bannedFamilies, curfew, crosswindLimitKts e ILS